feat: add lol hidden match history check command

--- a/napcat-plugin-groupguard/OWNER_MANUAL.html
+++ b/napcat-plugin-groupguard/OWNER_MANUAL.html
@@ -202,10 +202,21 @@
                                 <td class="px-4 py-3 font-mono">标准 x2/x3/x4</td>
                                 <td class="px-4 py-3 font-mono">面议</td>
                                 <td class="px-4 py-3 font-mono font-bold text-blue-600">面议</td>
-                                <td class="px-4 py-3 text-xs text-slate-500">核心大客户，提供VIP服务</td>
+                                <td class="px-4 py-3 text-xs text-slate-500">核心大客户，提供 VIP 专属服务</td>
                             </tr>
                         </tbody>
                     </table>
+                </div>
+
+                <div class="mt-6 p-4 bg-blue-50 rounded-lg border border-blue-100">
+                    <h4 class="font-bold text-blue-800 mb-2">🎁 新增高价值功能：LOL 查封号 & 隐藏战绩</h4>
+                    <p class="text-sm text-blue-700 mb-2">
+                        集成《英雄联盟》官方封号查询及隐藏战绩查询接口，为游戏类社群提供刚需工具。
+                    </p>
+                    <ul class="list-disc list-inside text-xs text-blue-600">
+                        <li><strong>查封号</strong>：免费，包含在所有版本中。</li>
+                        <li><strong>查隐藏</strong>：需配置 Token，建议作为付费增值服务。</li>
+                    </ul>
                 </div>
                 
                 <div class="mt-6 text-sm text-slate-500">
@@ -251,6 +262,21 @@
                             <div class="cmd-tag">开启全局自身撤回</div>
                             <div class="cmd-tag">关闭全局自身撤回</div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- API Integrations -->
+            <section id="api" class="bg-white rounded-xl shadow-sm p-6 border border-slate-100">
+                <h2 class="text-xl font-bold mb-4 flex items-center gap-2">
+                    <span class="w-1 h-6 bg-yellow-500 rounded-full"></span>
+                    第三方 API 配置
+                </h2>
+                <div class="space-y-4">
+                    <div>
+                        <h3 class="font-bold text-slate-700 mb-2">LOL 隐藏战绩查询 Token</h3>
+                        <p class="text-xs text-slate-500 mb-2">配置 lolso1.com 的 Token 以启用隐藏战绩查询功能。</p>
+                        <div class="cmd-tag">设置loltoken &lt;Token&gt;</div>
                     </div>
                 </div>
             </section>
