--- a/napcat-plugin-groupguard/USER_MANUAL.html
+++ b/napcat-plugin-groupguard/USER_MANUAL.html
@@ -462,6 +462,20 @@
                 <h2>6. 高级功能</h2>
                 
                 <div class="cmd-box">
+                    <span class="cmd-title">LOL 封号查询</span>
+                    <p>查询指定 QQ 号的英雄联盟封号状态及详细原因。</p>
+                    <div class="cmd-code">查封号 &lt;QQ号&gt;</div>
+                    <p style="font-size:0.8rem; color:var(--text-light); margin-top:0.5rem">示例：查封号 123456789</p>
+                </div>
+
+                <div class="cmd-box">
+                    <span class="cmd-title">LOL 隐藏战绩查询 <span class="tag tag-pro">付费</span></span>
+                    <p>查询指定召唤师的隐藏战绩（匹配/排位/乱斗）。</p>
+                    <div class="cmd-code">查隐藏 &lt;召唤师名&gt; [大区ID]</div>
+                    <p style="font-size:0.8rem; color:var(--text-light); margin-top:0.5rem">示例：查隐藏 TheShy 1 (默认1区)</p>
+                </div>
+
+                <div class="cmd-box">
                     <span class="cmd-title">问答系统 (自动回复)</span>
                     <p>支持精确匹配、模糊匹配和正则匹配。</p>
                     <div class="grid grid-2">
